# AdventOfCode

2015/: .gitignore
2022/01/: aoc2201_1.py  aoc2201_2.py
2022/02/: aoc2202_1.py  aoc2202_2.py
2022/03/: aoc2203_1.py  aoc2203_2.py
2022/04/: aoc2204_1.py  aoc2204_2.py
2022/05/: aoc2205_1.py  aoc2205_2.py
2022/06/: aoc2206_1.py  aoc2206_2.py
2022/07/: aoc2207_1.py  aoc2207_2.py  result_1.txt  result_2.txt
2022/08/: aoc2208_1.py  aoc2208_2.py
2022/09/: aoc2209_1.py  aoc2209_2.py
2022/10/: aoc2210_1.py  aoc2210_2.py
2022/11/: aoc2211_1.py  aoc2211_2.py  aoc2211_2a.py  result_2.txt
2022/12/: aoc2212_1.py  aoc2212_2.py  result_2.txt
2022/13/: aoc2213_1.py  aoc2213_2.py
2022/14/: aoc2214_1.py  aoc2214_2.py
2022/15/: aoc2215_1.py  aoc2215_2.py  result_1.txt  result_2.txt
2022/16/: aoc2216_1 copy.py  aoc2216_1.py  aoc2216_2.py
2022/17/: aoc2217_1.py  aoc2217_2.py  result_2.txt
2022/18/: aoc2218_1.py  aoc2218_2.py
2022/19/: aoc2219_1 copy 2.py  aoc2219_1 copy 3.py  aoc2219_1 copy 4.py  aoc2219_1 copy 5.py  aoc2219_1 copy.py  aoc2219_1 works.py  aoc2219_1.py  aoc2219_2.py  out.txt  test.py
2022/template/: aoc22XX_1.py  aoc22XX_2.py
2023/: memoized.py
2023/01/: aoc2301_2.py
2023/02/: aoc2302_1.py  aoc2302_2.py
2023/03/: aoc2303_1.py  aoc2303_2.py  result_1.txt
2023/04/: aoc2304_1.py  (+2 more)
2024/: .gitignore
2025.haskell/: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cabal.project  hie.yaml  new-day.sh  run.sh  x2025-haskell.cabal
2025.haskell/Y2025/: Day01.hs
2025.haskell/app/: Main.hs
2025.haskell/lib/: AoC.hs
(+164 files in other folders)
